fix Lithuania point overlap, measures buttons and graphs moving for access measures

--- a/style.css
+++ b/style.css
@@ -20,31 +20,35 @@ h1, h2, h3 {
 
 /* But your visualization should be full-width and full-height */
 .vis-holder {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .vis-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  width: 100%;
-  height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center; /* Center horizontally */
+	align-items: center; /* Center vertically */
+	width: 100%;
+	height: 100%;
 }
 
 .scatter_bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 100%;
 }
 
 .bar-graph {
 	width: 100%; 
 	height: 100%; 
+}
+
+.placeholder {
+	padding: 7.4%;
 }
 
 .bar-button-container button {
@@ -69,11 +73,11 @@ h1, h2, h3 {
 }
 
 .clear-button-container {
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  width: 100%;
-  height: 20%;
+	display: flex;
+	justify-content: center; /* Center horizontally */
+	align-items: center; /* Center vertically */
+	width: 100%;
+	height: 20%;
 }
 
 .tooltip {
@@ -96,51 +100,51 @@ h1, h2, h3 {
   }
 
 #clear-button {
-  align-items: center;
-  background-color: #FFE7E7;
-  background-position: 0 0;
-  border: 1px solid #FEE0E0;
-  border-radius: 11px;
-  box-sizing: border-box;
-  color: #D33A2C;
-  cursor: pointer;
-  display: flex;
-  font-size: 1rem;
-  font-weight: 700;
-  line-height: 33.4929px;
-  padding: 2px 12px;
-  text-align: left;
-  text-underline-offset: 1px;
-  transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
-  touch-action: manipulation;
-  white-space: nowrap;
-  word-break: break-word;
+	align-items: center;
+	background-color: #FFE7E7;
+	background-position: 0 0;
+	border: 1px solid #FEE0E0;
+	border-radius: 11px;
+	box-sizing: border-box;
+	color: #D33A2C;
+	cursor: pointer;
+	display: flex;
+	font-size: 1rem;
+	font-weight: 700;
+	line-height: 33.4929px;
+	padding: 2px 12px;
+	text-align: left;
+	text-underline-offset: 1px;
+	transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
+	touch-action: manipulation;
+	white-space: nowrap;
+	word-break: break-word;
 }
 
 #clear-button:hover {
-  background-color: #FFE3E3;
-  border-color: #FAA4A4;
+	background-color: #FFE3E3;
+	border-color: #FAA4A4;
 }
 
 #clear-button:active:hover {
-  background-color: #D33A2C;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
-  color: #FFFFFF;
+	background-color: #D33A2C;
+	box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
+	color: #FFFFFF;
 }
 
 .scatterplot-container {
-  width: 100%; /* Make scatter plot smaller */
-  height: 100%;
-  position: relative;
+	width: 100%; /* Make scatter plot smaller */
+	height: 100%;
+	position: relative;
 }
 
 .bar-graphs-container {
-  width: 100%; /* Make bar graphs bigger */
-  height: 100%; /* Adjust height to center vertically */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; /* Center horizontally */
+	width: 100%; /* Make bar graphs bigger */
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center; /* Center horizontally */
 }
 
 .group {
@@ -153,15 +157,14 @@ h1, h2, h3 {
 	height: 100%;
 }
 
-
 .bar-chart-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  padding-top: 1%;
-  width: 100%;
-  height: 100%
+	display: flex;
+	flex-direction: row;
+	justify-content: center; /* Center horizontally */
+	align-items: center; /* Center vertically */
+	padding-top: 1%;
+	width: 100%;
+	height: 100%
 }
 
 .point {
@@ -193,10 +196,10 @@ circle.selected {
 }
 
 .legendContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: flex-start;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: flex-start;
 }
 
   
